@@ -139,6 +139,7 @@ set(libtorrent_include_files
 	torrent_peer_allocator.hpp
 	torrent_status.hpp
 	tracker_manager.hpp
+	truncate.hpp
 	udp_socket.hpp
 	udp_tracker_connection.hpp
 	union_endpoint.hpp
@@ -402,6 +403,7 @@ set(sources
 	torrent_peer_allocator.cpp
 	torrent_status.cpp
 	tracker_manager.cpp
+	truncate.cpp
 	udp_socket.cpp
 	udp_tracker_connection.cpp
 	upnp.cpp
