@@ -200,6 +200,7 @@ run test_hash_picker.cpp ;
 run test_torrent.cpp ;
 run test_remap_files.cpp ;
 run test_similar_torrent.cpp ;
+run test_truncate.cpp ;
 
 # turn these tests into simulations
 run test_resume.cpp ;
@@ -314,4 +315,5 @@ alias deterministic-tests :
 	test_xml
 	test_store_buffer
 	test_similar_torrent
+	test_truncate
 	;
